ajuste no fornt end

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <header>
         <div class="container header-container">
             <a href="#" class="logo">
-                <i class="fas fa-ticket-alt"></i>
-                Gestor de Rifa
+                <img class="logo-header" src="dados-landing-page/img/logoGestorDeRifas.png" alt="logo gestor de rifas">
             </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
@@ -29,7 +28,11 @@
                 <li><a href="#cta" class="btn btn-secondary">Acessar Plataforma</a></li>
             </ul>
         </div>
+
     </header>
+
+
+
 
     <!-- Hero Section -->
     <section class="hero" id="home">
@@ -55,7 +58,9 @@
                             <div class="example-btn green"></div>
                         </div>
                     </div>
+                    <img src="dados-landing-page/img/image.png" alt="Imagem do Gestor de Rifa">
                 </div>
+
             </div>
         </div>
     </section>
@@ -225,11 +230,10 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <div class="footer-container" style="display: none;">
+            <div class="footer-container">
                 <div class="footer-section">
                     <div class="footer-logo">
-                        <i class="fas fa-ticket-alt"></i>
-                        Gestor de Rifa
+                        <img class="logo-footer" src="dados-landing-page/img/logoGestorDeRifas.png" alt="logo gestor de rifas">
                     </div>
                     <p>Soluções profissionais para gerenciamento de rifas, sorteios e campanhas de arrecadação.</p>
                     <div class="social-links">
